<resources>
    <string name="app_name" translatable="false">Cryptocam</string>
    <string name="error_picking_directory">Error picking directory</string>
    <string name="pref_output_directory">Set output directory</string>
    <string name="choose_output_directory">Choose output directory</string>
    <string name="pick_out_dir_desc">Create and pick a directory where encrypted files will be saved.</string>
    <string name="open_file_picker">Open file picker</string>
    <string name="pick_key_desc">To use Cryptocam, you need to import a public key from the Companion App by scanning its QR code.</string>
    <string name="pref_output_directory_summary">Encrypted videos will be stored here</string>
    <string name="video_framerate">Video framerate</string>
    <string name="video_resolution">Video resolution</string>
    <string name="video_resolution_summary">%s (Not all resolutions may be supported)</string>
    <string name="actual_recording_resolution">Actual recording resolution: %s</string>
    <string name="enable_overlay">Enable overlay</string>
    <string name="enable_overlay_summary">Let others around you know that your recordings are safely encrypted.</string>
    <string name="record_on_start">Record on start</string>
    <string name="record_on_start_summary">Video recording will start as soon as the app opens.</string>
    <string name="recording_in_background">Recording in the background</string>
    <string name="background_recording_desc">Cryptocam supports recording in the background. That means recording will continue even if you exit the app or turn the screen off (!!!This does not work on Android 11 and up!!!).\nDepending on your device\'s manufacturer, Android might stop Cryptocam from running to save battery. To make sure that doesn\'t happen without you noticing, your device will regularly vibrate while recording. If the vibrating stops, it means Cryptocam was killed.</string>
    <string name="vibrate_while_recording">Vibrate during recording</string>
    <string name="vibrate_while_recording_summary">Regularly vibrate while recording in the background so you\'ll know if Cryptocam is killed by Android</string>
    <string name="notification_channel_description">Running background tasks</string>
    <string name="notification_channel_name">System Services</string>
    <string name="notification_text">Recording in progress</string>
    <string name="notification_title">System Service</string>
    <string name="tutorial_website">Cryptocam tutorial site</string>
    <string name="tutorial_website_description">There is a full tutorial available on the Cryptocam website. It will explain how to generate keys, set them up in Cryptocam and how to decrypt videos.</string>
    <string name="licenses">Licenses</string>
    <string name="licenses_description">Image and library licenses</string>
    <string name="title_keys">My keys</string>
    <string name="key_list_desc">Every checked key will be able to decrypt files. To add a new key, scan a qr code from the companion app.</string>
    <string name="qr_scan_fail">Failed to import key. Try scanning again.</string>
    <string name="import_key_fail">Failed to import key. Maybe it already exists?</string>
    <string name="save_key">Save key</string>
    <string name="fingerprint">Fingerprint:</string>
    <string name="name_empty_error">Name can\'t be empty</string>
    <string name="import_key">Import key</string>
    <string name="scan_qrcode">Scan QR code</string>
    <string name="pref_keys">Keys</string>
    <string name="pref_keys_summary">Manage keys used to encrypt files</string>
    <string name="must_select_one_key">You must select at least one key.</string>
    <string name="no_key_selected">No key selected! Check at least one key in settings.</string>
    <string name="go_to_tutorial"><a href="https://cryptocam.gitlab.io">Go to tutorial</a></string>
    <string name="open_tutorial_site">Visit tutorial site</string>
    <string name="tutorial_url">https://cryptocam.gitlab.io/</string>
    <string name="delete_key">Delete key</string>
    <string name="public_key">Public key</string>
    <string name="copied_public_key">Copied key to clipboard</string>
    <string name="confirm_delete_key">Delete key \"%s\"?</string>
    <string name="invalid_public_key">Invalid public key</string>
    <string name="key_name">Key name</string>
    <string name="import_from_string">Import key as text</string>
    <string name="vibrate_on_photo">Haptic feedback for photos</string>
    <string name="vibrate_on_photo_summary">Vibrate when shutter button is pressed</string>
    <string name="tile_start_recording">Record video</string>
    <string name="tile_stop_recording">Stop recording</string>
    <string name="enable_custom_notification">Use custom notification</string>
    <string name="notification_app_name">Notification app name</string>
    <string name="custom_notification_settings">Custom notification</string>
    <string name="custom_notification_summary">Customize and disguise background recording notification</string>
    <string name="pref_notification_title">Notification title</string>
    <string name="pref_notification_text">Notification text</string>
    <string name="enable_custom_notification_summary">Show custom notification during background recording to hide the fact that Cryptocam is running</string>
    <string name="pref_notification_icon">Notification icon</string>
    <string name="pref_notification_style">Notification style</string>
    <string name="output_file_name">Output file name pattern</string>
    <string name="filename_pattern_variables" translatable="false">$uuid, $year, $month, $day, $hour, $min, $sec, $num</string>
    <string name="filename_pattern_description">"Pattern to generate file names. Variables: "</string>
    <string name="remove_exif_data">Remove photo metadata</string>
    <string name="remove_exif_data_summary">Even if you keep EXIF data, it is still encrypted and not readable without your secret key.</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="remember_shooting_mode">Remember shooting mode</string>
    <string name="remember_shooting_mode_summary">Start app in last used mode (photo/video)</string>
    <string name="app_name_stealth">core services</string>
    <string name="notification_low_memory_recording_stopped">Memory low, recording stopped</string>
    <string name="notification_low_memory_recording_not_started">Insufficient memory, recording not started</string>
</resources>
