<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pickOutDirTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/basic"
                android:text="@string/choose_output_directory"
                style="@style/titleStyle" />

            <ImageView
                android:id="@+id/pickOutDirImage"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/ic_folder_color" />

            <TextView
                android:id="@+id/pickOutDirDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="32dp"
                android:text="@string/pick_out_dir_desc"
                style="@style/longTextStyle" />
        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/pickOutDirButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:drawableRight="@drawable/ic_arrow_forward"
        android:textColor="#fff"
        android:textSize="20sp"
        android:text="@string/open_file_picker" />


</LinearLayout>